// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adaptProductRecommendations() should get product adapted with a first element (123) on return 1`] = `
Object {
  "id": "123",
  "values": Array [],
}
`;

exports[`adaptProductRecommendations() should get product adapted with no values 1`] = `
Object {
  "id": "123",
  "values": Array [],
}
`;

exports[`adaptProductRecommendations() should get product adapted with one value 1`] = `
Object {
  "id": "123",
  "values": Array [
    Object {
      "id": "1234",
      "score": 0.59,
    },
  ],
}
`;
